--- a/motive-chess-uci/motive-chess-uci.vcxproj
+++ b/motive-chess-uci/motive-chess-uci.vcxproj
@@ -149,7 +149,9 @@
     <ClCompile Include="Fen.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="motive-chess-uci.cpp" />
+    <ClCompile Include="Move.cpp" />
     <ClCompile Include="Option.cpp" />
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Registration.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,7 +160,9 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Fen.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Move.h" />
     <ClInclude Include="Option.h" />
+    <ClInclude Include="Piece.h" />
     <ClInclude Include="Registration.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
