--- a/motive-chess-uci/motive-chess-uci.vcxproj
+++ b/motive-chess-uci/motive-chess-uci.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="CopyProtection.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Fen.cpp" />
+    <ClCompile Include="GameContext.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="motive-chess-uci.cpp" />
     <ClCompile Include="Move.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="CopyProtection.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Fen.h" />
+    <ClInclude Include="GameContext.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Move.h" />
     <ClInclude Include="Option.h" />
