CHS-3 Unify handling of castling flags

--- a/motive-chess-uci/motive-chess-uci.vcxproj.filters
+++ b/motive-chess-uci/motive-chess-uci.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="GameContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CastlingRights.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameContext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CastlingRights.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
