--- a/motive-chess-uci/motive-chess-uci.vcxproj
+++ b/motive-chess-uci/motive-chess-uci.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Broadcaster.cpp" />
+    <ClCompile Include="CastlingRights.cpp" />
     <ClCompile Include="CopyProtection.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Fen.cpp" />
@@ -166,6 +167,7 @@
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Broadcaster.h" />
+    <ClInclude Include="CastlingRights.h" />
     <ClInclude Include="CopyProtection.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Fen.h" />
