Add a context object for the go parameters

--- a/motive-chess-uci/motive-chess-uci.vcxproj.filters
+++ b/motive-chess-uci/motive-chess-uci.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="CastlingRights.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GoContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CastlingRights.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GoContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
