--- a/motive-chess-uci/motive-chess-uci.vcxproj
+++ b/motive-chess-uci/motive-chess-uci.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Fen.cpp" />
     <ClCompile Include="GameContext.cpp" />
+    <ClCompile Include="GoContext.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="motive-chess-uci.cpp" />
     <ClCompile Include="Move.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Fen.h" />
     <ClInclude Include="GameContext.h" />
+    <ClInclude Include="GoContext.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Move.h" />
     <ClInclude Include="Option.h" />
