--- a/motive-chess-uci/motive-chess-uci.vcxproj
+++ b/motive-chess-uci/motive-chess-uci.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="GameContext.cpp" />
     <ClCompile Include="GoContext.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="LogManager.cpp" />
     <ClCompile Include="motive-chess-uci.cpp" />
     <ClCompile Include="Move.cpp" />
     <ClCompile Include="Option.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="GameContext.h" />
     <ClInclude Include="GoContext.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="LogManager.h" />
     <ClInclude Include="Move.h" />
     <ClInclude Include="Option.h" />
     <ClInclude Include="Piece.h" />
